fix tags on mobile

--- a/client/src/sass/_general.scss
+++ b/client/src/sass/_general.scss
@@ -799,7 +799,7 @@ input[type="checkbox"] {
 
 .session-page__voting {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 .session-page__title {
